...
          backgroundColor: Colors.transparent,
          elevation: 0,
          leading: IconButton(
            icon: const Icon(
              Icons.arrow_back,
              color: Colors.white,
              semanticLabel: 'Close video player',
            ),
            onPressed: context.pop,
          ),
        ),
        body: const Center(
          child: Text(
...
