...
            ),
            _buildTabButton(
              context,
              ref,
              'assets/icon/compass.svg',
              1,
              'explore_tab',
            ),
            // Camera button in center of bottom nav
            _CameraButton(
              onTap: () {
                Log.info(
                  '👆 User tapped camera button',
...
            ),
            _buildTabButton(
              context,
              ref,
              'assets/icon/userCircle.svg',
              3,
              'profile_tab',
            ),
          ],
        ),
      ),
    );
  }
...
