...
  final int totalLikes;

  @override
  Widget build(BuildContext context) {
    return VideoActionButton(
      iconAsset: 'assets/icon/content-controls/like.svg',
      semanticIdentifier: 'like_button',
      semanticLabel: isLiked ? 'Unlike video' : 'Like video',
      iconColor: isLiked ? VineTheme.likeRed : VineTheme.whiteText,
      isLoading: isLikeInProgress,
      count: totalLikes,
      onPressed: () {
        context.read<VideoInteractionsBloc>().add(
...
