...
  final int totalReposts;

  @override
  Widget build(BuildContext context) {
    return VideoActionButton(
      iconAsset: 'assets/icon/content-controls/repost.svg',
      semanticIdentifier: 'repost_button',
      semanticLabel: isReposted ? 'Remove repost' : 'Repost video',
      iconColor: isReposted ? VineTheme.vineGreen : VineTheme.whiteText,
      isLoading: isRepostInProgress,
      count: totalReposts,
      onPressed: () {
        context.read<VideoInteractionsBloc>().add(
...
