appId: co.openvine.app
env:
  USER_EMAIL: automatedmaestrouser@mailinator.com
  USER_PWD: Password01
---
#TC to check that the user can login with a fresh app with email and pwd
#Steps:
# 1. Open the app in clear state: Login screen is displayed
# 2. Tap on sign in
# 3. Input Email and Password, and tap on "Log In": User is redirected to the Explore screen, New tab

# 1. Open the app in clear state: Login screen is displayed
- launchApp:
    clearState: true
- runFlow: "../asserts/assertSplash.yaml"
- runFlow: "../asserts/assertLogin.yaml"

# 2. Tap on sign in

- tapOn: Sign in with a different account
- runFlow: ../asserts/assertSignIn.yaml

# 3. Input Email and Password, and tap on "Log In": User is redirected to the Explore screen, New tab
- tapOn: Email
- inputText: ${USER_EMAIL}
- tapOn: Password
- inputText: ${USER_PWD}

- tapOn:
          text: Sign in
          index: 1
#Android keyboard close
#- runFlow:
#    when:
#      visible: Back
#    commands:
#      - tapOn:
#          id: input_method_nav_back
#      - tapOn:
#          text: Sign in
 #         index: 1
#iOS keyboard close
#- runFlow:
#    when:
#      visible: Sign in
#    commands:
#      - tapOn:
#          text: Sign in
#          index: 1

- waitForAnimationToEnd
- runFlow:
    when:
      visible: Save Password?
    commands:
      - tapOn: Not Now
- runFlow: ../asserts/assertExploreNew.yaml

- runFlow: ../tests/removeKeys.yaml
