appId: co.openvine.app
env:
  COMMENT: "Automated comment"
  FULL_COMMENT: ""
---
- evalScript: ${output.FULL_COMMENT = COMMENT + " on " + new Date().toISOString().replace('T',' ').split('.')[0]}

#TC to comment a video,
# given the user is logged in in the app in the Explore/New tab,
# Comment the video with description VIDEO_TITLE
#Steps:
# 1. Open 1st video of the New grid: Validate video playback
# 2. Tap on Comment to Open the comments modal: Validate Comments section is displayed
# 3. Input comment FULL_COMMENT and tap send: Validate comment is displayed with "now" as timestamp.
# 4. Close the comments section: Validate playback screen is displayed

# 1. Open 1st video of the New grid
- tapOn:
    id: video_thumbnail_0

# 2. Tap on Comment to Open the comments modal: Validate Comments section is displayed
- tapOn:
    id: comments_button
- runFlow: "../asserts/assertCommentsModal.yaml"

# 3. Input comment COMMENT with current timestamp: Validate comment is displayed with "now" as timestamp
- tapOn:
    id: comment_text_field
- inputText: ${output.FULL_COMMENT}
- tapOn:
    id: send_comment_button
- assertVisible: ${FULL_COMMENT}
- waitForAnimationToEnd
- assertVisible: "now\n • \nYou.*"

# 4. Close the comments section: Validate playback screen is displayed
- swipe:
    from:
      text: "\\d+\\sComments?" # Matches one or more digits followed by " Comment" or " Comments"
    direction: DOWN
- runFlow: ../asserts/assertVideoPlayback.yaml

