appId: co.openvine.app
tags:
  - Social
---
#TC to like a video,
# given the user is logged in in the app,,
# validate the like is on for the video VIDEO_TITLE and is listed in the user profile, likes tab
#Steps:
# 1. Open specific video VIDEO_TITLE
# 2. Tap on the Heart: Validate video is liked
# 3. Tap on the profile: Validate profile is loaded
# 4. Tap on the likes tab: Validate tab is loaded and VIDEO_TITLE listed

# 1. Open specific video VIDEO_TITLE
- runFlow: ../utils/openSpecificVideo.yaml
#- waitForAnimationToEnd

# 2. Tap on the Heart: Validate video is liked
- tapOn:
    id: like_button
- runFlow: "../asserts/assertVideoLiked.yaml"

# 3. Tap on the profile: Validate profile is loaded
- doubleTapOn:
    id: profile_tab
    delay: 100
- runFlow: ../asserts/assertProfile.yaml
# 4. Tap on the likes tab: Validate tab is loaded and VIDEO_TITLE listed
- tapOn: Tab 2 of 3
- tapOn:
    point: 20%,74%
- assertVisible: ${VIDEO_DESCRIPTION}
