appId: co.openvine.app
tags:
  - Social
---
#TC to like a video,
# given the user is logged in in the app in the Explore/New tab,
# validate user can like a video by tapping the heart and next it is listed in the user profile, likes tab
#Steps:
# 1. Open 1st video of the New grid: Validate video playback
# 2. Tap on the Heart: Validate video is liked
# 3. Tap on the profile: Validate profile is loaded
# 4. Tap on the likes tab: Validate tab is loaded and video is listed

# 1. Open 1st video of the New grid
- tapOn:
    id: video_thumbnail_0
- runFlow: ../asserts/assertVideoPlayback.yaml

# 2. Tap on the Heart: Validate video is liked
- tapOn:
    id: like_button
- runFlow: "../asserts/assertVideoLiked.yaml"
# Back button on iOS devices
- runFlow:
    when:
      visible: |-
        Go back
        Back
    commands:
      - assertVisible: |-
          Go back
          Back
      - tapOn: |-
          Go back
          Back

# Back button on Android devices
- runFlow:
    when:
      visible: Go back
    commands:
      - assertVisible: Go back
      - tapOn: Go back

# 3. Tap on the profile: Validate profile is loaded
- tapOn:
    id: profile_tab
- runFlow: ../asserts/assertProfile.yaml

# 4. Tap on the likes tab: Validate likes tab is loaded and video is listed
- tapOn: |-
    Tab 2 of 4
    liked_tab
- tapOn: liked_video_thumbnail_0
- runFlow: "../asserts/assertVideoLiked.yaml"
- tapOn: Close video player
