appId: co.openvine.app
tags:
  - Social
---
#TC to unlike a video,
# given the user is logged in in the app and only has 1 video liked,
# validate the like is on for the video on the liked tab unlike it, and empty likes tab on the profile
#Steps:
# 1. Open the profile and navigate to the liked_tab: Tab is displayed
# 2. Tap on 1st video of the liked tab and unlike the video: Validate video is unliked
# 3. Close the video and Tap on profile, liked tab: Validate tab is loaded and video is not listed

# 1. Open the profile and navigate to the liked_tab: Tab is displayed
- tapOn:
    id: profile_tab
- runFlow: ../asserts/assertProfile.yaml
- tapOn: |-
    Tab 2 of 4
    liked_tab

# 2. Tap on 1st video of the liked tab and unlike the video: Validate video is unliked
- tapOn: liked_video_thumbnail_0
- waitForAnimationToEnd
- tapOn:
    id: like_button
- runFlow: "../asserts/assertVideoUnliked.yaml"

# 3. Close the video and Tap on profile, liked tab: Validate tab is loaded and video is not listed
- tapOn: Close video player
- tapOn: |-
    Tab 2 of 4
    liked_tab
- assertNotVisible: liked_video_thumbnail_0
